wp-content/themes/theme/styles/modules/footer.css
footer {
	background-color: var(--gray);
	min-height: 260px;
	padding: 80px 20px;
	text-align: center;
}

.logo {
	padding-bottom: 30px;
	& img {
			height: 50px;
			width: auto;
	}
}

.legal {
	color: var(--white);
	font-size: 14px;
	padding-bottom: 30px;

	& .links {
			& a {
				color: var(--green);
				text-decoration: underline;
		}
	}
}

.social {
	color: var(--white);
	font-size: 14px;
	text-align: center;

	& .linkedin {
		height: 20px;
		width: auto;
		color: #fff;
	}
}

@media (--tablet) {
	footer {
		text-align: left;
	}
	.social {
		text-align: right;
	}
}

